Added AppData, which loads by default.

--- a/spireplayer-unity.Editor.csproj
+++ b/spireplayer-unity.Editor.csproj
@@ -201,24 +201,24 @@
     <None Include="Assets\Plugins\ThirdParty\JsonDotNet\link.xml" />
     <None Include="Assets\Plugins\ThirdParty\WebSocket-Sharp\websocket-sharp.xml" />
     <None Include="Assets\Plugins\link.xml" />
-    <None Include="Assets\StreamingAssets\Static\AssetData\TeslaAssets.xml" />
-    <None Include="Assets\StreamingAssets\Static\ContentData\States.xml" />
-    <None Include="Assets\StreamingAssets\Static\ContentData\TeslaContent.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatteryArchitecture.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatteryComponents.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatteryIntroduction.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatteryPenthouse.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatterySafetyConcerns.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\SpireDemo.xml" />
-    <None Include="Assets\StreamingAssets\Static\PartData\HVBatteryParts.xml" />
-    <None Include="Assets\StreamingAssets\Static\PartGroupData\HVBatteryPartGroups.xml" />
-    <None Include="Assets\StreamingAssets\Static\SceneData\TeslaScenes.xml" />
-    <None Include="Assets\StreamingAssets\Static\ScriptData\TeslaScripts.xml" />
-    <None Include="Assets\StreamingAssets\Static\StateData\TeslaStates.xml" />
-    <None Include="Assets\StreamingAssets\Static\TuneVarData\GuideTuneVars.xml" />
-    <None Include="Assets\StreamingAssets\Static\TuneVarData\UITuneVars.xml" />
-    <None Include="Assets\StreamingAssets\Static\UIElementData\TeslaUIElements.xml" />
-    <None Include="Assets\StreamingAssets\Static\UserExperienceData\Tutorials.xml" />
+    <None Include="Assets\StreamingAssets\App\AssetData\TeslaAssets.xml" />
+    <None Include="Assets\StreamingAssets\App\ContentData\States.xml" />
+    <None Include="Assets\StreamingAssets\App\ContentData\TeslaContent.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryArchitecture.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryComponents.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryIntroduction.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryPenthouse.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatterySafetyConcerns.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\SpireDemo.xml" />
+    <None Include="Assets\StreamingAssets\App\PartData\HVBatteryParts.xml" />
+    <None Include="Assets\StreamingAssets\App\PartGroupData\HVBatteryPartGroups.xml" />
+    <None Include="Assets\StreamingAssets\App\SceneData\TeslaScenes.xml" />
+    <None Include="Assets\StreamingAssets\App\ScriptData\TeslaScripts.xml" />
+    <None Include="Assets\StreamingAssets\App\StateData\TeslaStates.xml" />
+    <None Include="Assets\StreamingAssets\App\TuneVarData\GuideTuneVars.xml" />
+    <None Include="Assets\StreamingAssets\App\TuneVarData\UITuneVars.xml" />
+    <None Include="Assets\StreamingAssets\App\UIElementData\TeslaUIElements.xml" />
+    <None Include="Assets\StreamingAssets\App\UserExperienceData\Tutorials.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
