--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -138,19 +138,20 @@
     <Compile Include="Assets\Source\Asset\IAssetUpdateService.cs" />
     <Compile Include="Assets\Source\Asset\Services\EditorAssetUpdateService.cs" />
     <Compile Include="Assets\Source\Asset\StandardAssetLoader.cs" />
-    <Compile Include="Assets\Source\Data\File\File.cs" />
-    <Compile Include="Assets\Source\Data\File\FileManager.cs" />
-    <Compile Include="Assets\Source\Data\File\IFileSystem.cs" />
-    <Compile Include="Assets\Source\Data\File\LocalFileSystem.cs" />
-    <Compile Include="Assets\Source\Data\File\MemoryFileSystem.cs" />
-    <Compile Include="Assets\Source\Data\File\NullFileSystem.cs" />
-    <Compile Include="Assets\Source\Data\File\NullSerializer.cs" />
     <Compile Include="Assets\Source\Debug\Log\UwpSocketLogger.cs" />
     <Compile Include="Assets\Source\Debug\Render\DebugRenderController.cs" />
     <Compile Include="Assets\Source\Debug\Render\DebugRendererMonoBehaviour.cs" />
     <Compile Include="Assets\Source\Debug\Render\FilteredRendererHandle.cs" />
     <Compile Include="Assets\Source\Debug\Render\RenderContext.cs" />
     <Compile Include="Assets\Source\Debug\Render\RenderContext2d.cs" />
+    <Compile Include="Assets\Source\File\File.cs" />
+    <Compile Include="Assets\Source\File\FileManager.cs" />
+    <Compile Include="Assets\Source\File\IFileManager.cs" />
+    <Compile Include="Assets\Source\File\IFileSystem.cs" />
+    <Compile Include="Assets\Source\File\LocalFileSystem.cs" />
+    <Compile Include="Assets\Source\File\MemoryFileSystem.cs" />
+    <Compile Include="Assets\Source\File\NullFileSystem.cs" />
+    <Compile Include="Assets\Source\File\NullSerializer.cs" />
     <Compile Include="Assets\Source\Graphics\Grid.cs" />
     <Compile Include="Assets\Source\Host\ApplicationHost.cs" />
     <Compile Include="Assets\Source\Host\ApplicationState.cs" />
@@ -187,6 +188,10 @@
     <Compile Include="Assets\Source\Patterns\StateMachine\FiniteStateMachine.cs" />
     <Compile Include="Assets\Source\Patterns\StateMachine\IState.cs" />
     <Compile Include="Assets\Source\Patterns\StateMachine\StateMachine.cs" />
+    <Compile Include="Assets\Source\Spire\Data\AppData.cs" />
+    <Compile Include="Assets\Source\Spire\Data\AppDataManager.cs" />
+    <Compile Include="Assets\Source\Spire\Data\FileProtocols.cs" />
+    <Compile Include="Assets\Source\Spire\Data\SceneData.cs" />
     <Compile Include="Assets\Source\States\Application.cs" />
     <Compile Include="Assets\Source\States\Edit\EditApplicationState.cs" />
     <Compile Include="Assets\Source\States\Initialize\InitializeApplicationState.cs" />
@@ -199,6 +204,7 @@
     <Compile Include="Assets\Source\Util\MonoBehaviourBootstrapper.cs" />
     <Compile Include="Assets\Source\Util\Render.cs" />
     <Compile Include="Assets\Source\Util\StandardQueryResolver.cs" />
+    <Compile Include="Assets\Source\Util\SystemXmlSerializer.cs" />
     <Compile Include="Assets\Source\Util\TypeUtil.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -208,24 +214,24 @@
     <None Include="Assets\Plugins\ThirdParty\JsonDotNet\link.xml" />
     <None Include="Assets\Plugins\ThirdParty\WebSocket-Sharp\websocket-sharp.xml" />
     <None Include="Assets\Plugins\link.xml" />
-    <None Include="Assets\StreamingAssets\Static\AssetData\TeslaAssets.xml" />
-    <None Include="Assets\StreamingAssets\Static\ContentData\States.xml" />
-    <None Include="Assets\StreamingAssets\Static\ContentData\TeslaContent.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatteryArchitecture.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatteryComponents.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatteryIntroduction.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatteryPenthouse.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\HVBatterySafetyConcerns.xml" />
-    <None Include="Assets\StreamingAssets\Static\ModuleData\SpireDemo.xml" />
-    <None Include="Assets\StreamingAssets\Static\PartData\HVBatteryParts.xml" />
-    <None Include="Assets\StreamingAssets\Static\PartGroupData\HVBatteryPartGroups.xml" />
-    <None Include="Assets\StreamingAssets\Static\SceneData\TeslaScenes.xml" />
-    <None Include="Assets\StreamingAssets\Static\ScriptData\TeslaScripts.xml" />
-    <None Include="Assets\StreamingAssets\Static\StateData\TeslaStates.xml" />
-    <None Include="Assets\StreamingAssets\Static\TuneVarData\GuideTuneVars.xml" />
-    <None Include="Assets\StreamingAssets\Static\TuneVarData\UITuneVars.xml" />
-    <None Include="Assets\StreamingAssets\Static\UIElementData\TeslaUIElements.xml" />
-    <None Include="Assets\StreamingAssets\Static\UserExperienceData\Tutorials.xml" />
+    <None Include="Assets\StreamingAssets\App\AssetData\TeslaAssets.xml" />
+    <None Include="Assets\StreamingAssets\App\ContentData\States.xml" />
+    <None Include="Assets\StreamingAssets\App\ContentData\TeslaContent.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryArchitecture.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryComponents.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryIntroduction.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryPenthouse.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatterySafetyConcerns.xml" />
+    <None Include="Assets\StreamingAssets\App\ModuleData\SpireDemo.xml" />
+    <None Include="Assets\StreamingAssets\App\PartData\HVBatteryParts.xml" />
+    <None Include="Assets\StreamingAssets\App\PartGroupData\HVBatteryPartGroups.xml" />
+    <None Include="Assets\StreamingAssets\App\SceneData\TeslaScenes.xml" />
+    <None Include="Assets\StreamingAssets\App\ScriptData\TeslaScripts.xml" />
+    <None Include="Assets\StreamingAssets\App\StateData\TeslaStates.xml" />
+    <None Include="Assets\StreamingAssets\App\TuneVarData\GuideTuneVars.xml" />
+    <None Include="Assets\StreamingAssets\App\TuneVarData\UITuneVars.xml" />
+    <None Include="Assets\StreamingAssets\App\UIElementData\TeslaUIElements.xml" />
+    <None Include="Assets\StreamingAssets\App\UserExperienceData\Tutorials.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
