--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WebGL:20</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -138,6 +140,7 @@
     <Compile Include="Assets\Source\Asset\IAssetUpdateService.cs" />
     <Compile Include="Assets\Source\Asset\Services\EditorAssetUpdateService.cs" />
     <Compile Include="Assets\Source\Asset\StandardAssetLoader.cs" />
+    <Compile Include="Assets\Source\Async\Async.cs" />
     <Compile Include="Assets\Source\Debug\Log\UwpSocketLogger.cs" />
     <Compile Include="Assets\Source\Debug\Render\DebugRenderController.cs" />
     <Compile Include="Assets\Source\Debug\Render\DebugRendererMonoBehaviour.cs" />
