--- a/spireplayer-unity.Editor.csproj
+++ b/spireplayer-unity.Editor.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Assets\Editor\Test\Asset\DummyAssetUpdateService.cs" />
     <Compile Include="Assets\Editor\Test\Data\FileManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Util\StandardQueryResolver_Tests.cs" />
+    <Compile Include="Assets\Editor\Tools\DataMigration\SpireDataMigrator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\ThirdParty\JsonDotNet\Assemblies\AOT\Newtonsoft.Json.XML" />
@@ -201,24 +202,22 @@
     <None Include="Assets\Plugins\ThirdParty\JsonDotNet\link.xml" />
     <None Include="Assets\Plugins\ThirdParty\WebSocket-Sharp\websocket-sharp.xml" />
     <None Include="Assets\Plugins\link.xml" />
-    <None Include="Assets\StreamingAssets\App\AssetData\TeslaAssets.xml" />
-    <None Include="Assets\StreamingAssets\App\ContentData\States.xml" />
-    <None Include="Assets\StreamingAssets\App\ContentData\TeslaContent.xml" />
-    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryArchitecture.xml" />
-    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryComponents.xml" />
-    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryIntroduction.xml" />
-    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatteryPenthouse.xml" />
-    <None Include="Assets\StreamingAssets\App\ModuleData\HVBatterySafetyConcerns.xml" />
-    <None Include="Assets\StreamingAssets\App\ModuleData\SpireDemo.xml" />
-    <None Include="Assets\StreamingAssets\App\PartData\HVBatteryParts.xml" />
-    <None Include="Assets\StreamingAssets\App\PartGroupData\HVBatteryPartGroups.xml" />
-    <None Include="Assets\StreamingAssets\App\SceneData\TeslaScenes.xml" />
-    <None Include="Assets\StreamingAssets\App\ScriptData\TeslaScripts.xml" />
-    <None Include="Assets\StreamingAssets\App\StateData\TeslaStates.xml" />
-    <None Include="Assets\StreamingAssets\App\TuneVarData\GuideTuneVars.xml" />
-    <None Include="Assets\StreamingAssets\App\TuneVarData\UITuneVars.xml" />
-    <None Include="Assets\StreamingAssets\App\UIElementData\TeslaUIElements.xml" />
-    <None Include="Assets\StreamingAssets\App\UserExperienceData\Tutorials.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\AssetData\TeslaAssets.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatteryArchitecture.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatteryComponents.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatteryIntroduction.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatteryPenthouse.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatterySafetyConcerns.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\SpireDemo.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\PartData\HVBatteryParts.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\PartGroupData\HVBatteryPartGroups.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\SceneData\TeslaScenes.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ScriptData\TeslaScripts.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\StateData\TeslaStates.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\TuneVarData\GuideTuneVars.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\TuneVarData\UITuneVars.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\UIElementData\TeslaUIElements.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\UserExperienceData\Tutorials.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
