--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -197,6 +197,8 @@
     <Compile Include="Assets\Source\Spire\Data\ContentData.cs" />
     <Compile Include="Assets\Source\Spire\Data\FileProtocols.cs" />
     <Compile Include="Assets\Source\Spire\Data\SceneData.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\ColorManager.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\HsbColor.cs" />
     <Compile Include="Assets\Source\Spire\IUX\IntentionManager.cs" />
     <Compile Include="Assets\Source\States\Application.cs" />
     <Compile Include="Assets\Source\States\Edit\EditApplicationState.cs" />
