Created IElement with visibility + highlighting needs.
Created ElementManager to control visiblity + highlights (pulled off of InteractableWidget from Spire)

Renamed ColorManager to ColorConfig.

--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -197,10 +197,12 @@
     <Compile Include="Assets\Source\Spire\Data\ContentData.cs" />
     <Compile Include="Assets\Source\Spire\Data\FileProtocols.cs" />
     <Compile Include="Assets\Source\Spire\Data\SceneData.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\ColorManager.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\ColorConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\HsbColor.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Intention\IElement.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Intention\IFocusable.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\IntentionController.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Intention\IntentionManager.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Intention\ElementManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\ILayerable.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\Layer.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\LayerManager.cs" />
