--- a/spireplayer-unity.Plugins.csproj
+++ b/spireplayer-unity.Plugins.csproj
@@ -85,26 +85,11 @@
     <Reference Include="UnityEditor.iOS.Extensions.Common">
       <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
     </Reference>
-    <Reference Include="CreateAR.Commons.Unity.DataStructures">
-      <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.DataStructures.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>Assets\Plugins\ThirdParty\JsonDotNet\Assemblies\Standalone\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="CreateAR.Commons.Unity.Storage">
-      <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.Storage.dll</HintPath>
-    </Reference>
-    <Reference Include="CreateAR.Commons.Unity.Messaging">
-      <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.Messaging.dll</HintPath>
-    </Reference>
-    <Reference Include="Strange.Net35">
-      <HintPath>Assets\Plugins\ThirdParty\Strange\net35\Strange.Net35.dll</HintPath>
-    </Reference>
-    <Reference Include="websocket-sharp">
-      <HintPath>Assets\Plugins\ThirdParty\WebSocket-Sharp\websocket-sharp.dll</HintPath>
-    </Reference>
     <Reference Include="CreateAR.Commons.Unity.Async">
       <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.Async.dll</HintPath>
+    </Reference>
+    <Reference Include="CreateAR.Commons.Unity.DataStructures">
+      <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.DataStructures.dll</HintPath>
     </Reference>
     <Reference Include="CreateAR.Commons.Unity.Http">
       <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.Http.dll</HintPath>
@@ -112,16 +97,60 @@
     <Reference Include="CreateAR.Commons.Unity.Logging">
       <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.Logging.dll</HintPath>
     </Reference>
+    <Reference Include="CreateAR.Commons.Unity.Messaging">
+      <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.Messaging.dll</HintPath>
+    </Reference>
+    <Reference Include="CreateAR.Commons.Unity.Storage">
+      <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Commons.Unity.Storage.dll</HintPath>
+    </Reference>
     <Reference Include="CreateAR.Trellis.Messages">
       <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Trellis.Messages.dll</HintPath>
     </Reference>
+    <Reference Include="Polenter.SharpSerializer">
+      <HintPath>Assets\Plugins\ThirdParty\Polenter.SharpSerializer.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Assets\Plugins\ThirdParty\JsonDotNet\Assemblies\Standalone\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="websocket-sharp">
+      <HintPath>Assets\Plugins\ThirdParty\WebSocket-Sharp\websocket-sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Plugins\CreateAR\Debug\DebugRenderController.cs" />
-    <Compile Include="Assets\Plugins\CreateAR\Debug\DebugRendererMonoBehaviour.cs" />
-    <Compile Include="Assets\Plugins\CreateAR\Debug\FilteredRendererHandle.cs" />
-    <Compile Include="Assets\Plugins\CreateAR\Debug\RenderContext.cs" />
-    <Compile Include="Assets\Plugins\CreateAR\Debug\RenderContext2d.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\compat\UwpTypeExtensions.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\api\BinderExceptionType.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\api\BindingConst.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\api\BindingConstraintType.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\api\IBinder.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\api\IBinding.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\api\IInstanceProvider.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\api\IManagedList.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\api\ISemiBinding.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\impl\Binder.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\impl\BinderException.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\impl\Binding.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\framework\impl\SemiBinding.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\api\ICrossContextInjectionBinder.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\api\IInjectionBinder.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\api\IInjectionBinding.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\api\IInjector.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\api\IInjectorFactory.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\api\InjectionBindingScope.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\api\InjectionBindingType.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\api\InjectionExceptionType.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\impl\CrossContextInjectionBinder.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\impl\InjectionBinder.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\impl\InjectionBinding.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\impl\InjectionException.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\impl\Injector.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\impl\InjectorFactory.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\injector\InjectAttribute.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\reflector\api\IReflectedClass.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\reflector\api\IReflectionBinder.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\reflector\api\ReflectionExceptionType.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\reflector\impl\ReflectedClass.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\reflector\impl\ReflectionBinder.cs" />
+    <Compile Include="Assets\Plugins\ThirdParty\Strange\reflector\impl\ReflectionException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\ThirdParty\JsonDotNet\Assemblies\AOT\Newtonsoft.Json.XML" />
@@ -130,6 +159,22 @@
     <None Include="Assets\Plugins\ThirdParty\JsonDotNet\link.xml" />
     <None Include="Assets\Plugins\ThirdParty\WebSocket-Sharp\websocket-sharp.xml" />
     <None Include="Assets\Plugins\link.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\AssetData\TeslaAssets.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatteryArchitecture.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatteryComponents.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatteryIntroduction.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatteryPenthouse.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\HVBatterySafetyConcerns.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ModuleData\SpireDemo.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\PartData\HVBatteryParts.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\PartGroupData\HVBatteryPartGroups.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\SceneData\TeslaScenes.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\ScriptData\TeslaScripts.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\StateData\TeslaStates.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\TuneVarData\GuideTuneVars.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\TuneVarData\UITuneVars.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\UIElementData\TeslaUIElements.xml" />
+    <None Include="Assets\StreamingAssets\App\SpireDemo\UserExperienceData\Tutorials.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
